# Career-AI-AGENT

./: .gitignore  README.en.md  README.md  README.zh.md  app.py  pyproject.toml
.omo/: boulder.json
.omo/evidence/: f1-plan-compliance-audit.md  f2-code-quality-review.md  f3-real-manual-qa.md  f4-scope-fidelity.md  task-0-1-baseline.txt  task-0-2-golden-fixtures.txt  task-1-1-workspace.txt  task-1-2-source-ingestion.txt  task-1-3-legacy-history.txt  task-1-debug-evidence-harness.md  task-11-skill-init.txt  task-12-streamlit-service-ui.txt  task-13-release-verification.txt  task-2-1-domain-contracts.txt  task-2-2-fact-requirement-extraction.txt  task-2-3-provenance-boundary.txt  task-2-github-raw-install-bash.md  task-2-github-raw-install-powershell.md  task-3-1-protocol-contracts.txt  task-3-2-factual-safety-harness.txt  task-3-3-adequacy-audit.txt  task-3-3-optimization-adequacy.txt  task-3-4-validation-state-machine.txt  task-3-cli-happy-path.md  task-3-cli-renderer-boundary.md  task-4-real-multi-strategy-generation.txt  task-4-skill-all-hosts.md  task-4-skill-conflict.md  task-5-1-accepted-document-ats-registry.txt  task-5-eval-bad-input.md  task-5-eval-quality.md  task-6-1-docx-html-playwright-rendering.txt  task-6-2-6-3-html-css-pdf-installation.txt  task-6-structured-host-package-render-ready.md  task-6-tailoring-render-boundary.md  task-6-tailoring-render-happy.md  task-7-latex-primitives.txt  (+6 more)
docs/: agent-install.md
prompts/: baseline.md  fact-preserving-rewriter.md  structured-agent.md
scripts/: install-agent.ps1  install-agent.sh
static/: app_theme.css
tests/: __init__.py  adequacy_helpers.py  resume_document_helpers.py  test_accepted_resume_document.py  test_agent_enforcement.py  test_agent_memory.py  test_agent_quality.py  test_agent_recovery.py  test_agent_recovery_runtime.py  test_agent_runtime.py  test_agent_tool_catalog.py  test_agent_tools.py  test_agent_trace.py  test_analysis.py  test_app_layout.py  test_app_security.py  test_app_theme.py  test_application_service.py  test_ats_normalization.py  test_boundary_harness.py  test_candidate_fact_extractor.py  test_cli.py  test_document_acceptance.py  test_document_renderers.py  test_eval_graders.py  test_eval_loader.py  test_eval_runner.py  test_exporters.py  test_failure_corpus.py  test_history.py  test_host_proposal_cli.py  test_host_proposal_cli_misc.py  test_host_proposal_cli_output.py  test_host_proposal_cli_render.py  test_host_structured_package_cli_render.py  test_jd_fetcher.py  test_jd_requirement_extractor.py  test_latex_primitives.py  test_latex_renderer.py  test_legacy_history_adapter.py  (+25 more)
(+173 files in other folders)
