[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-career-intelligence-suite"
version = "0.1.0"
description = "Local Streamlit MVP for resume and job-description intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "python-docx>=1.1",
    "pypdf>=4.3",
    "streamlit>=1.36",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "PLR2004"]

[tool.basedpyright]
include = ["src", "tests", "app.py"]
typeCheckingMode = "all"
pythonVersion = "3.12"
